unset variables, described variabled in README and added some instructions to README